# rusty_kanban

./: .env  Cargo.toml  README.md  Rocket.toml  rustfmt.toml
migrations/2022-02-03-131954_create_tables/: down.sql  up.sql
src/: main.rs  schema.rs
src/graphql/: mod.rs  mutation.rs  query.rs
src/model/: board.rs  card.rs  mod.rs  project.rs  slot.rs  task.rs
ui/: codegen.yml  package-lock.json  package.json  schema.graphql
ui/src/: .graphqlconfig  App.tsx  Home.tsx  NewProjectForm.tsx  Project.tsx  SingleStringForm.tsx  graphql.ts  index.sass  index.tsx  mutations.graphql  queries.graphql  schema.graphql  store.ts  urls.ts
ui/src/bulmaHelpers/: card.tsx  modal.tsx  modelCard.tsx  tabs.tsx
ui/src/projects/: Board.tsx  Card.tsx  CardTitle.tsx  NewBoardForm.tsx  NewCardForm.tsx  NewProjectForm.tsx  NewSlotForm.tsx  NewTaskForm.tsx  Project.tsx  ProjectBase.tsx  ProjectTitle.tsx  Slot.tsx  SlotTitle.tsx  Task.tsx
